fix: fix data annotations
